# My-Compiler

./: CMakeLists.txt  CMakePresets.json  README.md  debug.txt  debug2.txt  main.cpp
src/: LL1_parser.h  LR_utils.h  SLR_parser.h  ast.cppm  ast.h  grammar.cppm  grammar2.cppm  lexer.cppm  lexer.h  lexer2.cppm  ll1_parser.cppm  lr_parser.cppm  lr_parser2.cppm  main.cpp  main.cppm  parser.h  pretty_print.h  slr.cppm  utils.cppm
src/common/: grammar.cppm  lexer_base.cppm  lr_parser.cppm  symbol.cppm
src/languages/four_fundamental_arithmetic/: lexer.cppm  ll1_parser.cppm  main.cppm
src/parsing/: lexer.cppm  main.cppm
src/parsing/common/: grammar.cppm  lr_parser.cppm
tests/: test_LR_utils.cpp  test_four_fundamental_arithmetic.cpp  test_grammar.cpp  test_grammar2.cpp  test_gtest.cpp  test_lexer.cpp
